--- a/index.html
+++ b/index.html
@@ -8,10 +8,14 @@
       href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,600,700"
       rel="stylesheet"
     />
-    <link rel="shortcut icon" href="src/img/favicon.png" type="image/x-icon" />
+    <link
+      rel="shortcut icon"
+      href="./src/img/favicon.png"
+      type="image/x-icon"
+    />
 
-    <link rel="stylesheet" href="src/sass/main.scss" />
-    <script type="module" src="src/js/controller.js"></script>
+    <link rel="stylesheet" href="./src/sass/main.scss" />
+    <script type="module" src="./src/js/controller.js"></script>
 
     <title>Findcipes // Search recipes</title>
   </head>
